// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test/app/ui/Header/Native.test.js Render props: { back: true } 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    back={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Left)>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="arrow-back"
            />
          </TouchableOpacity>
        </Styled(Left)>,
        <Styled(Body)>
          <Styled(Item)
            style={
              Object {
                "flexGrow": 1,
                "height": 25,
                "marginLeft": 20,
              }
            }
          >
            <Styled(Icon)
              name="ios-search"
            />
            <TextField
              label="Search"
              name="search"
              onChange={[Function]}
              type="search"
            />
          </Styled(Item)>
        </Styled(Body)>,
        <Styled(Right)>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="menu"
            />
          </TouchableOpacity>
        </Styled(Right)>,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="arrow-back"
            />
          </TouchableOpacity>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Styled(Icon)
              name="arrow-back"
            />,
            "onPress": [Function],
            "style": Object {
              "width": 70,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-back",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(Item)
            style={
              Object {
                "flexGrow": 1,
                "height": 25,
                "marginLeft": 20,
              }
            }
          >
            <Styled(Icon)
              name="ios-search"
            />
            <TextField
              label="Search"
              name="search"
              onChange={[Function]}
              type="search"
            />
          </Styled(Item)>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="ios-search"
              />,
              <TextField
                label="Search"
                name="search"
                onChange={[Function]}
                type="search"
              />,
            ],
            "style": Object {
              "flexGrow": 1,
              "height": 25,
              "marginLeft": 20,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "ios-search",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "label": "Search",
                "name": "search",
                "onChange": [Function],
                "type": "search",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="menu"
            />
          </TouchableOpacity>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Styled(Icon)
              name="menu"
            />,
            "onPress": [Function],
            "style": Object {
              "alignItems": "flex-end",
              "flex": 1,
              "width": 70,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "menu",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Left)>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="arrow-back"
              />
            </TouchableOpacity>
          </Styled(Left)>,
          <Styled(Body)>
            <Styled(Item)
              style={
                Object {
                  "flexGrow": 1,
                  "height": 25,
                  "marginLeft": 20,
                }
              }
            >
              <Styled(Icon)
                name="ios-search"
              />
              <TextField
                label="Search"
                name="search"
                onChange={[Function]}
                type="search"
              />
            </Styled(Item)>
          </Styled(Body)>,
          <Styled(Right)>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="menu"
              />
            </TouchableOpacity>
          </Styled(Right)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="arrow-back"
              />
            </TouchableOpacity>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Styled(Icon)
                name="arrow-back"
              />,
              "onPress": [Function],
              "style": Object {
                "width": 70,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-back",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Item)
              style={
                Object {
                  "flexGrow": 1,
                  "height": 25,
                  "marginLeft": 20,
                }
              }
            >
              <Styled(Icon)
                name="ios-search"
              />
              <TextField
                label="Search"
                name="search"
                onChange={[Function]}
                type="search"
              />
            </Styled(Item)>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Icon)
                  name="ios-search"
                />,
                <TextField
                  label="Search"
                  name="search"
                  onChange={[Function]}
                  type="search"
                />,
              ],
              "style": Object {
                "flexGrow": 1,
                "height": 25,
                "marginLeft": 20,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "ios-search",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Search",
                  "name": "search",
                  "onChange": [Function],
                  "type": "search",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="menu"
              />
            </TouchableOpacity>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Styled(Icon)
                name="menu"
              />,
              "onPress": [Function],
              "style": Object {
                "alignItems": "flex-end",
                "flex": 1,
                "width": 70,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "menu",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test/app/ui/Header/Native.test.js Render props: {} 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Left)>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="arrow-back"
            />
          </TouchableOpacity>
        </Styled(Left)>,
        <Styled(Body)>
          <Styled(Item)
            style={
              Object {
                "flexGrow": 1,
                "height": 25,
                "marginLeft": 20,
              }
            }
          >
            <Styled(Icon)
              name="ios-search"
            />
            <TextField
              label="Search"
              name="search"
              onChange={[Function]}
              type="search"
            />
          </Styled(Item)>
        </Styled(Body)>,
        <Styled(Right)>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="menu"
            />
          </TouchableOpacity>
        </Styled(Right)>,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="arrow-back"
            />
          </TouchableOpacity>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Styled(Icon)
              name="arrow-back"
            />,
            "onPress": [Function],
            "style": Object {
              "width": 70,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-back",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(Item)
            style={
              Object {
                "flexGrow": 1,
                "height": 25,
                "marginLeft": 20,
              }
            }
          >
            <Styled(Icon)
              name="ios-search"
            />
            <TextField
              label="Search"
              name="search"
              onChange={[Function]}
              type="search"
            />
          </Styled(Item)>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="ios-search"
              />,
              <TextField
                label="Search"
                name="search"
                onChange={[Function]}
                type="search"
              />,
            ],
            "style": Object {
              "flexGrow": 1,
              "height": 25,
              "marginLeft": 20,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "ios-search",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "label": "Search",
                "name": "search",
                "onChange": [Function],
                "type": "search",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "width": 70,
              }
            }
          >
            <Styled(Icon)
              name="menu"
            />
          </TouchableOpacity>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Styled(Icon)
              name="menu"
            />,
            "onPress": [Function],
            "style": Object {
              "alignItems": "flex-end",
              "flex": 1,
              "width": 70,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "menu",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Left)>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="arrow-back"
              />
            </TouchableOpacity>
          </Styled(Left)>,
          <Styled(Body)>
            <Styled(Item)
              style={
                Object {
                  "flexGrow": 1,
                  "height": 25,
                  "marginLeft": 20,
                }
              }
            >
              <Styled(Icon)
                name="ios-search"
              />
              <TextField
                label="Search"
                name="search"
                onChange={[Function]}
                type="search"
              />
            </Styled(Item)>
          </Styled(Body)>,
          <Styled(Right)>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="menu"
              />
            </TouchableOpacity>
          </Styled(Right)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="arrow-back"
              />
            </TouchableOpacity>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Styled(Icon)
                name="arrow-back"
              />,
              "onPress": [Function],
              "style": Object {
                "width": 70,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-back",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Item)
              style={
                Object {
                  "flexGrow": 1,
                  "height": 25,
                  "marginLeft": 20,
                }
              }
            >
              <Styled(Icon)
                name="ios-search"
              />
              <TextField
                label="Search"
                name="search"
                onChange={[Function]}
                type="search"
              />
            </Styled(Item)>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Icon)
                  name="ios-search"
                />,
                <TextField
                  label="Search"
                  name="search"
                  onChange={[Function]}
                  type="search"
                />,
              ],
              "style": Object {
                "flexGrow": 1,
                "height": 25,
                "marginLeft": 20,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "ios-search",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Search",
                  "name": "search",
                  "onChange": [Function],
                  "type": "search",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "width": 70,
                }
              }
            >
              <Styled(Icon)
                name="menu"
              />
            </TouchableOpacity>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Styled(Icon)
                name="menu"
              />,
              "onPress": [Function],
              "style": Object {
                "alignItems": "flex-end",
                "flex": 1,
                "width": 70,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "menu",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test/app/ui/Header/Native.test.js SideBar 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBar />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(List)
        dataArray={
          Array [
            Object {
              "icon": "settings",
              "label": "HEADER_MENU_PROFILE",
              "to": "/profile",
            },
            Object {
              "icon": "star",
              "label": "HEADER_MENU_FAVORITES",
              "to": "/favorites",
            },
            Object {
              "icon": "book",
              "label": "HEADER_MENU_BOOKS_I_READ",
              "to": "/books-i-read",
            },
            Object {
              "icon": "log-out",
              "label": "HEADER_MENU_LOGOUT",
              "to": "/logout",
            },
          ]
        }
        renderRow={[Function]}
      />,
      "style": Object {
        "backgroundColor": "#ffffff",
        "paddingTop": 20,
      },
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "dataArray": Array [
          Object {
            "icon": "settings",
            "label": "HEADER_MENU_PROFILE",
            "to": "/profile",
          },
          Object {
            "icon": "star",
            "label": "HEADER_MENU_FAVORITES",
            "to": "/favorites",
          },
          Object {
            "icon": "book",
            "label": "HEADER_MENU_BOOKS_I_READ",
            "to": "/books-i-read",
          },
          Object {
            "icon": "log-out",
            "label": "HEADER_MENU_LOGOUT",
            "to": "/logout",
          },
        ],
        "renderRow": [Function],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(List)
          dataArray={
            Array [
              Object {
                "icon": "settings",
                "label": "HEADER_MENU_PROFILE",
                "to": "/profile",
              },
              Object {
                "icon": "star",
                "label": "HEADER_MENU_FAVORITES",
                "to": "/favorites",
              },
              Object {
                "icon": "book",
                "label": "HEADER_MENU_BOOKS_I_READ",
                "to": "/books-i-read",
              },
              Object {
                "icon": "log-out",
                "label": "HEADER_MENU_LOGOUT",
                "to": "/logout",
              },
            ]
          }
          renderRow={[Function]}
        />,
        "style": Object {
          "backgroundColor": "#ffffff",
          "paddingTop": 20,
        },
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "dataArray": Array [
            Object {
              "icon": "settings",
              "label": "HEADER_MENU_PROFILE",
              "to": "/profile",
            },
            Object {
              "icon": "star",
              "label": "HEADER_MENU_FAVORITES",
              "to": "/favorites",
            },
            Object {
              "icon": "book",
              "label": "HEADER_MENU_BOOKS_I_READ",
              "to": "/books-i-read",
            },
            Object {
              "icon": "log-out",
              "label": "HEADER_MENU_LOGOUT",
              "to": "/logout",
            },
          ],
          "renderRow": [Function],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test/app/ui/Header/Native.test.js renderBackButton 1`] = `
<Styled(Left)>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "width": 70,
      }
    }
  >
    <Styled(Icon)
      name="arrow-back"
    />
  </TouchableOpacity>
</Styled(Left)>
`;

exports[`test/app/ui/Header/Native.test.js renderCenter 1`] = `
<Styled(Body)>
  <Styled(Item)
    style={
      Object {
        "flexGrow": 1,
        "height": 25,
        "marginLeft": 20,
      }
    }
  >
    <Styled(Icon)
      name="ios-search"
    />
    <TextField
      label="Search"
      name="search"
      onChange={[Function]}
      type="search"
    />
  </Styled(Item)>
</Styled(Body)>
`;

exports[`test/app/ui/Header/Native.test.js renderList 1`] = `
<Styled(ListItem)
  button={true}
>
  <Styled(Icon)
    name="settings"
    style={
      Object {
        "marginRight": 20,
      }
    }
  />
  <Link
    component={[Function]}
    replace={false}
    to="/profile"
  >
    <Styled(Text)>
      Profile
    </Styled(Text)>
  </Link>
</Styled(ListItem)>
`;
